Fixing bugs with homepage slideshow
Intended to fix Firefox bug where `object-fit` breaks during
transitions, but in the process also fixing flashing visible/invisible
on page load, and increasing browsers support by no longer needing
`object-fit` at all.

--- a/web/app/themes/tgp-theme/assets/styles/main.scss
+++ b/web/app/themes/tgp-theme/assets/styles/main.scss
@@ -36,19 +36,23 @@
         .cycle-slideshow {
             overflow: hidden;
         }
-        img.cycle-slide {
+        img.cycle-slide, img.cycle-slide-active {
             top: 0 !important;
             bottom: auto !important;
             width: 100% !important;
-            height: auto !important;
+            height: 100% !important;
             max-width: none !important;
             max-height: none !important;
             margin: 0 auto !important;
 
-            .object-fit & {
-                max-height: 100% !important;
-                object-fit: cover;
-            }
+            background-size: cover;
+            background-position: center;
+
+            // No longer necessary now that we're using background images
+            // .object-fit & {
+            //     max-height: 100% !important;
+            //     object-fit: cover !important;
+            // }
         }
     }
 
